--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.6.1",
     "react-bootstrap": "^1.0.0-beta.2",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
