--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.3",
     "mongoose": "^5.3.13",
     "web3": "^0.20.7",
-    "bignumber": "^1.1.0"
+    "bignumber": "^1.1.0",
+    "mongodb": "^3.1.10"
   },
   "engines": {
     "node": "8.x"
