--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "body-parser": "^1.18.3",
-    "mongoose": "^5.3.13",
-    "web3": "^0.20.7",
     "bignumber": "^1.1.0",
-    "mongodb": "^3.1.10"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.15",
+    "web3": "^0.20.7"
   },
   "engines": {
     "node": "8.x"
