--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bignumber": "^1.1.0",
+    "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.10",
