--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.7.0",
     "jquery": "^3.3.1",
+    "mongoose": "^5.4.17",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.6.3",
